--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"><div id="main"></div></div>
+    <div id="root"></div>
   </body>
 </html>
